<resources>
    <string name="app_name">Scheduler</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="add_new_entry">Add new entry</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nickname">Nickname</string>
</resources>