<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_form_student_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/first_name"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:autofillHints="@string/name" />

        <EditText
            android:id="@+id/activity_form_student_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/last_name"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:autofillHints="@string/name" />

        <EditText
            android:id="@+id/activity_form_student_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/phone"
            android:singleLine="true"
            android:inputType="phone"
            android:autofillHints="@string/phone" />

        <EditText
            android:id="@+id/activity_form_student_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/email"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/email" />

        <EditText
            android:id="@+id/activity_form_student_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/nickname"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:autofillHints="@string/name" />

    </LinearLayout>

</ScrollView>